eu-north-1/vpc.tf
# VPC Resources - Region: eu-north-1
# Generated by AWS Scanner

resource "aws_vpc" "vpc_028a7ac3def029dc8" {
  cidr_block = "172.31.0.0/16"
}

resource "aws_subnet" "subnet_034807390be2dab3e" {
  vpc_id            = "vpc-028a7ac3def029dc8"
  cidr_block        = "172.31.32.0/20"
  availability_zone = "eu-north-1b"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "subnet_0ceb98dc4082c4550" {
  vpc_id            = "vpc-028a7ac3def029dc8"
  cidr_block        = "172.31.16.0/20"
  availability_zone = "eu-north-1a"
  map_public_ip_on_launch = true
}

resource "aws_subnet" "subnet_09a4a4f5fb44bc111" {
  vpc_id            = "vpc-028a7ac3def029dc8"
  cidr_block        = "172.31.0.0/20"
  availability_zone = "eu-north-1c"
  map_public_ip_on_launch = true
}

resource "aws_security_group" "sg_00f48a7109663e60c" {
  name        = "launch-wizard-1"
  description = "launch-wizard-1 created 2025-07-07T09:26:36.816Z"
  vpc_id      = "vpc-028a7ac3def029dc8"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 5000
    to_port     = 5000
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "sg_0d65c65f065ab2476" {
  name        = "launch-wizard-2"
  description = "launch-wizard-2 created 2025-10-15T20:09:01.527Z"
  vpc_id      = "vpc-028a7ac3def029dc8"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_security_group" "sg_0dd64149dafd7ed11" {
  name        = "launch-wizard-3"
  description = "launch-wizard-3 created 2025-10-20T06:41:51.087Z"
  vpc_id      = "vpc-028a7ac3def029dc8"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

resource "aws_internet_gateway" "igw_03d71a7beb848dd99" {
  vpc_id = "vpc-028a7ac3def029dc8"
}
